# Rag-Chatbot

./: .gitignore  README.md  RUNNING_THE_APPLICATION.md  install_gpu_torch.bat  pyproject.toml  requirements.txt  start_backend.bat
app/: containers.py  main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: chat_service.py  memory_manager.py  router.py
app/services/ingestion/: chunker.py  loader.py
app/services/llm/: base.py  factory.py  providers.py
app/services/query_expansion/: expander.py
app/services/retriever/: base.py  ensemble.py  hybrid.py  mock.py  reranker.py
data/csv/: test.csv
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatArea.jsx  CitationDisplay.jsx  MessageBubble.jsx  SettingsPage.jsx  Sidebar.jsx
frontend/src/components/chat/: ChatInput.jsx  MessageBubble.jsx  MessageList.jsx  MessageSkeleton.jsx  WelcomeScreen.jsx
frontend/src/components/common/: ConfirmationDialog.jsx  ErrorBoundary.jsx  NotificationToast.jsx
frontend/src/components/settings/: ModelDetailsModal.jsx  ModelDownloadCard.jsx  ModelList.jsx  SystemStatusCards.jsx
frontend/src/components/sidebar/: ConfigurationSection.jsx  (+8 more)
frontend/src/hooks/: useChat.js  useModelDownload.js  useSettingsLogic.js  useSidebarLogic.js
frontend/src/services/: api.js
frontend/src/utils/: formatters.js
tests/: debug_ingest.py  eval_ragas.py  evaluate_rag.py  inspect_chunks.py  test_features.py  verify.py  verify_persistence.py  verify_strictness.py
(+4 files in other folders)
