[tool.poetry]
name = "rag-agent"
version = "0.1.0"
description = "RAG Orchestration Agent"
authors = ["Parameswar"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
pydantic-settings = "*"
httpx = "*"
openai = "*"
google-generativeai = "*"
python-dotenv = "*"
langchain = "*"
langchain-community = "*"
sentence-transformers = "*"
faiss-cpu = "*"
rank_bm25 = "*"
pypdf = "*"
python-docx = "*"
pandas = "*"
langchain-huggingface = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"